Filter buttons fixed on mobile

--- a/src/app/browse-games/browse-games.component.scss
+++ b/src/app/browse-games/browse-games.component.scss
@@ -4,9 +4,8 @@
     grid-template-rows: 1fr auto;
     .topRow {
         display: grid;
-        grid-template-columns: 1fr auto auto;
+        grid-template-columns: 1fr auto auto auto;
         margin-bottom: 10px;
-
         .pageTitle{
             justify-self: left;
             font-weight: 600;
@@ -18,6 +17,13 @@
         }
         .searchBox{
             justify-self: right;
+        }
+
+        h6 {
+            align-self: center;
+        }
+        .filters {
+            justify-self: center;
         }
     }
 
@@ -33,5 +39,12 @@
     .tableContainer {
         width: 95%;
         justify-self: center;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    
+    .pageTitle{
+        display: none;
     }
 }
